statistic, fixed overflow

--- a/src/styles/base/app.scss
+++ b/src/styles/base/app.scss
@@ -23,7 +23,7 @@ body {
   max-width: 100%;
   background-color: var(--col-shadow-warrior);
   color: var(--primary-text-color);
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 body,
